RESOLVED FIXED58085
Logic error in HTMLMediaElement::exitFullscreen()
https://bugs.webkit.org/show_bug.cgi?id=58085
Summary Logic error in HTMLMediaElement::exitFullscreen()
Jer Noble
Reported 2011-04-07 14:55:27 PDT
If a script calls exitFullscreen() on an element which is not the current full screen element, it will hit the ASSERT in the legacy full screen media case.
Attachments
Patch (2.20 KB, patch)
2011-04-07 15:03 PDT, Jer Noble
no flags
Patch (2.19 KB, patch)
2011-04-07 16:44 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2011-04-07 14:58:45 PDT
Jer Noble
Comment 2 2011-04-07 15:03:31 PDT
WebKit Review Bot
Comment 3 2011-04-07 16:09:39 PDT
Jer Noble
Comment 4 2011-04-07 16:44:29 PDT
Created attachment 88733 [details] Patch Missing parenthesis reinserted.
Jer Noble
Comment 5 2011-04-08 13:12:16 PDT
Note You need to log in before you can comment on or make changes to this bug.