2011-04-07  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        Logic error in HTMLMediaElement::exitFullscreen()
        https://bugs.webkit.org/show_bug.cgi?id=58085

        The new full screen API case could fall through to the legacy API case
        unintentionally if a script calls exitFullscreen on an element which is
        not the current full screen element.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::enterFullscreen):
        (WebCore::HTMLMediaElement::exitFullscreen):

Canonical link: https://commits.webkit.org/73105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83332 268f45cc-cd09-0410-ab3c-d52691b4dbfc